@@ -565,8 +565,7 @@ int  m_setname(cptr, sptr, parc, parv)
 		ircsprintf(sptr->info, "%s", parv[1]);
 
 	/* Check for n:lines here too */
-#ifdef OLD
-	if (!IsAnOper(sptr) && find_nline(sptr))
+	if (!IsAnOper(sptr) && Find_ban(sptr->info, CONF_BAN_REALNAME))
 	{
 		int  xx;
 		xx =
@@ -574,7 +573,6 @@ int  m_setname(cptr, sptr, parc, parv)
 		    "Your GECOS (real name) is banned from this server");
 		return xx;
 	}
-#endif
 	sendto_serv_butone_token(cptr, sptr->name, MSG_SETNAME, TOK_SETNAME,
 	    ":%s", parv[1]);
 	if (MyConnect(sptr))
@@ -1478,15 +1476,13 @@ int  m_chgname(cptr, sptr, parc, parv)
 		/* set the realname first to make n:line checking work */
 		ircsprintf(acptr->info, "%s", parv[2]);
 		/* only check for n:lines if the person who's name is being changed is not an oper */
-#ifdef OLD
-		if (!IsAnOper(acptr) && find_nline(acptr)) {
+		if (!IsAnOper(acptr) && Find_ban(acptr->info, CONF_BAN_REALNAME)) {
 			int xx;
 			xx =
 			   exit_client(cptr, sptr, &me,
 			   "Your GECOS (real name) is banned from this server");
 			return xx;
 		}
-#endif
 		if (!IsULine(sptr))
 		{
 			sendto_umode(UMODE_EYES,
